--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
         "firebase": "^10.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.22.1",
+        "react-firebase-hooks": "^5.1.1",
         "react-hot-toast": "^2.4.1",
+        "react-router-dom": "^6.22.1",
         "zustand": "^4.5.1"
     },
     "devDependencies": {
